--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!------Aside Start-------->
       <div class="aside">
         <div class="logo">
-          <a href="#"><span>MY</span>Resume</a>
+          <a href="#"><span>MY</span>Port</a>
         </div>
         <div class="nav-toggler">
           <span></span>
@@ -27,16 +27,24 @@
             <a href="#" class="active"><i class="fa fa-home"></i>Home</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-user"></i>About me</a>
+            <a href="./pages/About me/index.html"
+              ><i class="fa fa-user"></i>About me</a
+            >
           </li>
           <li>
-            <a href="#"><i class="fa fa-file"></i>Projects</a>
+            <a href="./pages/Projects/index.html"
+              ><i class="fa fa-file"></i>Projects</a
+            >
           </li>
           <li>
-            <a href="#"><i class="fa fa-briefcase"></i>Other Works</a>
+            <a href="./pages/Other works/index.html"
+              ><i class="fa fa-briefcase"></i>Other Works</a
+            >
           </li>
           <li>
-            <a href="#"><i class="fa fa-phone"></i>Contact</a>
+            <a href="./pages/Contact/index.html"
+              ><i class="fa fa-phone"></i>Contact</a
+            >
           </li>
         </ul>
       </div>
@@ -58,17 +66,19 @@
                 <p>
                   This project is a personal website that showcases my design
                   skills <br />
-                  and web development knowledge. The website has 5 pages,
+                  and web development knowledge. This website has 5 pages,
                   including <br />
                   all the past projects I have worked on. It will serve as a
                   portfolio
                   <br />
                   that allows you to learn more about me.
                 </p>
-                <a href="aboutme" class="btn abt-me">Know About Me</a>
+                <a href="./pages/About me/index.html" class="btn abt-me"
+                  >More About Me</a
+                >
               </div>
               <div class="home-img">
-                <img src="./assets/img/mae.jpg" alt="" />
+                <img src="./assets/img/_Logo.png" alt="" />
               </div>
             </div>
           </div>
@@ -77,7 +87,5 @@
       </div>
       <!------Main Content End------->
     </div>
-    <!-------- JS Files -------->
-    <script src="./assets/js/script.js"></script>
   </body>
 </html>
