--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
               <div class="home-img">
                 <img src="./assets/img/_Logo.png" alt="" />
               </div>
+              <div class="social-media">
+                <a href="https://facebook.com/yourprofile" target="_blank"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+                <a href="https://instagram.com/yourprofile" target="_blank"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+                <a href="https://twitter.com/yourhandle" target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+                <a href="https://github.com/Maerona03" target="_blank"
+                  ><i class="fab fa-github"></i
+                ></a>
+              </div>
             </div>
           </div>
         </section>
