refactor(About me, Projects): add images and update style

--- a/pages/About me/index.html
+++ b/pages/About me/index.html
@@ -116,8 +116,29 @@
                   </div>
                 </div>
               </div>
+              <div class="application-expertise-section">
+                <h3 class="section-title">APPLICATION EXPERTISE</h3>
+                <div class="expertise-items">
+                  <div class="expertise-item">
+                    <img src="./assets/img/ai.png" alt="Adobe Illustrator" class="expertise-logo">
+                    <h4>Adobe Illustrator</h4>
+                  </div>
+                  <div class="expertise-item">
+                    <img src="./assets/img/adobe-photoshop.png" alt="Adobe Photoshop" class="expertise-logo">
+                    <h4>Adobe Photoshop</h4>
+                  </div>
+                  <div class="expertise-item">
+                    <img src="./assets/img/figma.png" alt="Figma" class="expertise-logo">
+                    <h4>Figma</h4>
+                  </div>
+                  <div class="expertise-item">
+                    <img src="./assets/img/VSCode.png" alt="VSCode" class="expertise-logo">
+                    <h4>VSCode</h4>
+                  </div>
+                </div>
+              </div>
               <div class="education-section">
-                <h3>Education</h3>
+                <h3>EDUCATION</h3>
                 <div class="education-items">
                   <div class="education-item">
                     <h4>Primary School</h4>
@@ -146,7 +167,7 @@
                 </div>
               </div>
               <div class="hobbies-section">
-               <div class="interest"> <h3>Hobbies and Interests</h3></div>
+               <div class="interest"> <h3>HOBBIES AND INTEREST</h3></div>
                 <div class="hobbies-items">
                     <div class="hobby-item">
                         <img src="./assets/img/camera.jpg" alt="Photography" class="hobby-image">
