--- a/pages/Projects/index.html
+++ b/pages/Projects/index.html
@@ -102,7 +102,9 @@
                 HTML and CSS to create attractive designs that are practical and
                 effective.
               </p>
-              <a href="https://maerona03.github.io/WD-seatwork4/" class="btn"
+              <a
+                href="https://maerona03.github.io/WD-seatwork4/index.html"
+                class="btn"
                 >View Project</a
               >
             </div>
