refactor(About me and Other works): enhance design and fixed some text.

--- a/pages/About me/index.html
+++ b/pages/About me/index.html
@@ -70,10 +70,10 @@
                 <div class="personal-info padd-15">
                   <div class="row">
                     <div class="info-item padd-15">
-                      <p>Birthday : <span>Oct 11 200</span></p>
+                      <p>Birthday : <span>Oct 11 2003</span></p>
                     </div>
                     <div class="info-item padd-15">
-                      <p>Age : <span>20</span></p>
+                      <p>Age : <span>20 year's old</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Email : <span>ronamae.@gmail.com</span></p>
@@ -144,7 +144,7 @@
                     <h4>Primary School</h4>
                     <p class="education-details">
                       Mauli Elementary School<br />
-                      Mauli, Guagua Pampanga<br />
+                      Mauli, Guagua, Pampanga<br />
                       2015 - 2019
                     </p>
                   </div>
@@ -152,7 +152,7 @@
                     <h4>Secondary School</h4>
                     <p class="education-details">
                       Pulungmasle High School<br />
-                      Pulungmasle Guagua Pampanga<br />
+                      Pulungmasle, Guagua, Pampanga<br />
                       2019 - 2022
                     </p>
                   </div>
@@ -160,14 +160,14 @@
                     <h4>Tertiary Education</h4>
                     <p class="education-details">
                       FEU Tech<br />
-                      Manila<br />
+                      Sampaloc, Manila<br />
                       2023 - present
                     </p>
                   </div>
                 </div>
               </div>
               <div class="hobbies-section">
-               <div class="interest"> <h3>HOBBIES AND INTEREST</h3></div>
+               <div class="interest"> <h3>HOBBIES & INTEREST</h3></div>
                 <div class="hobbies-items">
                     <div class="hobby-item">
                         <img src="./assets/img/camera.jpg" alt="Photography" class="hobby-image">
