refactor(Projects): update link and enhance

--- a/pages/Projects/index.html
+++ b/pages/Projects/index.html
@@ -61,6 +61,11 @@
               <a href="https://maerona03.github.io/WD-seatwork2/" class="btn"
                 >View Project</a
               >
+              <a
+                href="https://github.com/Maerona03/WD-seatwork2.git"
+                class="btn"
+                >View Repository</a
+              >
             </div>
           </div>
 
@@ -74,6 +79,9 @@
               </p>
               <a href="https://maerona03.github.io/WD-Handson2/" class="btn"
                 >View Project</a
+              >
+              <a href="https://github.com/Maerona03/WD-Handson2.git" class="btn"
+                >View Repository</a
               >
             </div>
           </div>
@@ -89,6 +97,9 @@
               </p>
               <a href="https://maerona03.github.io/WD-sw3/" class="btn"
                 >View Project</a
+              >
+              <a href="https://github.com/Maerona03/WD-sw3.git" class="btn"
+                >View Repository</a
               >
             </div>
           </div>
@@ -106,6 +117,11 @@
                 href="https://maerona03.github.io/WD-seatwork4/index.html"
                 class="btn"
                 >View Project</a
+              >
+              <a
+                href="https://github.com/Maerona03/WD-seatwork4.git"
+                class="btn"
+                >View Repository</a
               >
             </div>
           </div>
